--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "type": "module",
+  "scripts":{
+    "start": "nodemon src/app.js",
+    "test": "echo \"Error: no test specified\" && exit1"
+  },
   "dependencies": {
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "uuid": "^9.0.0"
   }
 }
